codex update ipset and PVE tokens

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,9 +4,9 @@
   <div class="col-md-4 mb-3">
     <div class="card h-100">
       <div class="card-body d-flex flex-column">
-        <h5 class="card-title">Firewall Whitelist</h5>
-        <p class="card-text">Manage firewall IP whitelist.</p>
-        <a href="{{ url_for('whitelist') }}" class="mt-auto btn btn-primary">Manage</a>
+        <h5 class="card-title">Firewall IP Sets</h5>
+        <p class="card-text">Manage IP sets and CIDR entries.</p>
+        <a href="{{ url_for('ipsets_index') }}" class="mt-auto btn btn-primary">Manage</a>
       </div>
     </div>
   </div>
