--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MySecretPVE</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/lux/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
@@ -18,7 +18,7 @@
             {% if session.get('logged_in') %}
             <li class="nav-item"><a class="nav-link" href="{{ url_for('settings_pve') }}">PVE</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('settings_tencent') }}">Tencent</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('whitelist') }}">Whitelist</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('ipsets_index') }}">Firewall</a></li>
             {% endif %}
           </ul>
           <ul class="navbar-nav">
@@ -33,5 +33,6 @@
       {% block content %}{% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    {% block scripts %}{% endblock %}
   </body>
 </html>
