--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
             <li class="nav-item"><a class="nav-link" href="{{ url_for('settings_pve') }}">PVE</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('settings_tencent') }}">Tencent</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('ipsets_index') }}">Firewall</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('temp_whitelist_page') }}">Temp Whitelist</a></li>
             {% endif %}
           </ul>
           <ul class="navbar-nav">
